--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
   get_it: ^8.0.2
+  go_router: ^14.6.2
+  flutter_dotenv: ^5.2.1
+  file_picker: ^8.1.5
 
 dev_dependencies:
   flutter_test:
