--- a/.gitignore
+++ b/.gitignore
@@ -98,4 +98,6 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
+.env
+
 # End of https://www.toptal.com/developers/gitignore/api/macos,flutter
