--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   go_router: ^14.6.2
   flutter_dotenv: ^5.2.1
   file_picker: ^8.1.5
+  hooks_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
